# sz3_iotest_tools

./: .gitignore  README.md  setup.cfg  setup.py
requirements/: requirements.txt
sz3_iotest_tools/: compression.py  compression_config.yaml  config.py  config.yaml  decompression.py  experiment.py  globus-network.py  globus-old.py  job.sh  result.json  sshproxy.sh
