[metadata]
name = sz3_iotest_tool
version = attr: sz3_iotest_tool.__version__
description = IO test for SZ3 and potentially other compressors
long_description = file:README.md
long_description_content_type=text/markdown

url = https://github.com/legendPerceptor/sz3_iotest_tool
author = Yuanjian Liu
author_email = yuanjian@uchicago.edu

[options]
packages = find:
python_requires = >=3.6


[options.packages.find]
exclude =
    tests
    docs

[flake8] 
exclude = .git
max-line-length = 118
extend-ignore = E203,W503,E501,E302,E231
max-complexity = 14

[tool:pytest]
# https://docs.pytest.org/en/stable/customize.html
addopts = -x
junit_family=xunit1
filterwarnings =
    ignore::DeprecationWarning

[mypy]
show_error_codes = True
check_untyped_defs = True
follow_imports = normal
strict_optional = True
plugins = pydantic.mypy
strict = True
disallow_untyped_defs = True

[mypy-fabric.*]
ignore_missing_imports = True

[mypy-invoke.*]
ignore_missing_imports = True
